--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
 			<version>${jetty.version}</version>
 		</dependency>
 
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.4</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
